--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
             <h1 class="site-title"><a href="/">{{ site.name }}</a></h1>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
-                <li><a href="/albums/">Audio</a></li>
+                <li><a href="/audio/">Audio</a></li>
             </ul>
         </nav>
     </header>
