--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -22,7 +22,7 @@
 }
 
 body {
-    font-family: jgs7;
+    font-family: 'jgs7', 'Courier New', monospace;
     line-height: 1.6;
     color: var(--text-color);
     background-color: var(--background-color);
