--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -15,6 +15,7 @@
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/audio/">Audio</a></li>
+                <li><a href="/shop/">Shop</a></li>
             </ul>
         </nav>
     </header>
