--- a/src/audio/index.njk
+++ b/src/audio/index.njk
@@ -14,7 +14,16 @@ title: Audio
         {% endif %}
         <div class="album-preview-details">
             <h2><a href="{{ audio.url }}">{{ audio.data.title }}</a></h2>
-            {% if audio.data.artist %}<p class="artist">{{ audio.data.artist }}</p>{% endif %}
+            {% if audio.data.artists %}
+                <p class="artist">by 
+                {% for artistName in audio.data.artists %}
+                    {% set artistSlug = artistName | slugify %}
+                    <a href="/artists/{{ artistSlug }}/" class="artist-link">{{ artistName }}</a>{% if not loop.last %}{% if loop.revindex == 2 %} and {% else %}, {% endif %}{% endif %}
+                {% endfor %}
+                </p>
+            {% elif audio.data.artist %}
+                <p class="artist">{{ audio.data.artist }}</p>
+            {% endif %}
             {% if audio.data.releaseDate %}<p class="release-date">Released: {{ audio.data.releaseDate | date("%B %d, %Y") }}</p>{% endif %}
             {% if audio.data.genre %}<p class="genre">Genre: {{ audio.data.genre }}</p>{% endif %}
             {% if audio.data.description %}
