--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -17,6 +17,7 @@
                 <li><a href="/audio/">Audio</a></li>
                 <li><a href="/artists/">Artists</a></li>
                 <li><a href="/shop/">Shop</a></li>
+                <li><a href="/about/">About</a></li>
             </ul>
         </nav>
     </header>
