fixing individual items shop page

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -20,6 +20,11 @@
                 <li><a href="/about/">About</a></li>
             </ul>
         </nav>
+        <marquee behaviour="alternate" direction="left">
+            <h1 class="status">
+            audio server not available                                radio soon to be added
+            </h1>
+        </marquee>
     </header>
 
     <main class="main-content">
@@ -27,7 +32,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>&copy; {{ site.name }} {{ "now" | date("%Y") }}</p>
+        <p> {{ site.name }} || {{ site.author }}</p>
     </footer>
 
     <script src="/assets/js/player.js"></script>
