--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ title: Home
 </section>
 
 <section class="featured-audio">
-    <h2>Latest Releases</h2>
+    <h2>latest additions</h2>
     <div class="album-grid">
     {% for audio in collections.audio.slice(0, 6) %}
         <div class="album-card">
