--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -19,6 +19,7 @@
                 <li><a href="/shop/">Shop</a></li>
                 <li><a href="/about/">About</a></li>
             </ul>
+            <div class="nav-cart"></div>
         </nav>
         <marquee behaviour="alternate" direction="left">
             <h1 class="status">
