radio page and cart

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -17,6 +17,7 @@
                 <li><a href="/audio/">Audio</a></li>
                 <li><a href="/artists/">Artists</a></li>
                 <li><a href="/shop/">Shop</a></li>
+                <li><a href="/radio/">Radio</a></li>
                 <li><a href="/about/">About</a></li>
             </ul>
             <div class="nav-cart"></div>
@@ -33,7 +34,7 @@
     </main>
 
     <footer class="site-footer">
-        <p> {{ site.name }} || {{ site.author }}</p>
+        <p> {{ site.name }} || computer && jazz everywhere </p>
     </footer>
 
     <script src="/assets/js/player.js"></script>
