--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,7 +24,7 @@
         </nav>
         <marquee behaviour="alternate" direction="left">
             <h1 class="status">
-            audio server not available                                radio soon to be added
+            audio server not available                |                radio soon to be added
             </h1>
         </marquee>
     </header>
@@ -38,5 +38,6 @@
     </footer>
 
     <script src="/assets/js/player.js"></script>
+    <script src="/assets/js/shop.js"></script>
 </body>
 </html>
