--- a/src/index.njk
+++ b/src/index.njk
@@ -300,8 +300,9 @@ title: Home
 
       const initialCode = `
 
-
-
+  \\O
+   |)     *saxophone jazz playing
+  ( \\   on crappy speakers in the background*
 `;
       const editor = new Editor(canvas, font, initialCode);
       // render code
