--- a/src/_includes/layouts/label.njk
+++ b/src/_includes/layouts/label.njk
@@ -1,18 +1,18 @@
 ---
 layout: layouts/base.njk
 ---
-<article class="artist">
-    <header class="artist-header">
+<article class="label">
+    <header class="label-header">
         {% if image %}
-        <div class="artist-image-container">
-            <img src="{{ image }}" alt="{{ name }}" class="artist-image">
+        <div class="label-image-container">
+            <img src="{{ image }}" alt="{{ name }}" class="label-image">
         </div>
         {% endif %}
-        <div class="artist-info">
-            <h1 class="artist-name">{{ name }}</h1>
-            {% if location %}<p class="artist-location">{{ location }}</p>{% endif %}
+        <div class="label-info">
+            <h1 class="label-name">{{ name }}</h1>
+            {% if location %}<p class="label-location">{{ location }}</p>{% endif %}
             {% if genres %}
-                <p class="artist-genres">
+                <p class="label-genres">
                 {% if genres is iterable and genres is not string %}
                     {{ genres | join(", ") }}
                 {% else %}
@@ -21,12 +21,12 @@ layout: layouts/base.njk
                 </p>
             {% endif %}
             {% if website %}
-                <p class="artist-website">
+                <p class="label-website">
                     <a href="{{ website }}" target="_blank" rel="noopener">{{ website }}</a>
                 </p>
             {% endif %}
             {% if social %}
-                <div class="artist-social">
+                <div class="label-social">
                     {% for platform, url in social %}
                         <a href="{{ url }}" target="_blank" rel="noopener" class="social-link">{{ platform }}</a>
                     {% endfor %}
@@ -36,28 +36,28 @@ layout: layouts/base.njk
     </header>
 
     {% if bio %}
-    <div class="artist-bio">
+    <div class="label-bio">
         {{ bio | markdown | safe }}
     </div>
     {% endif %}
 
-    <div class="artist-content">
+    <div class="label-content">
         {{ content | safe }}
     </div>
 
-    {% set artistAlbums = [] %}
+    {% set labelAlbums = [] %}
     {% for album in collections.audio %}
-        {% if album.data.artists and album.data.artists.includes(name) %}
-            {% set artistAlbums = (artistAlbums.push(album), artistAlbums) %}
-        {% elif album.data.artist and album.data.artist == name %}
-            {% set artistAlbums = (artistAlbums.push(album), artistAlbums) %}
+        {% if album.data.labels and album.data.labels.includes(name) %}
+            {% set labelAlbums = (labelAlbums.push(album), labelAlbums) %}
+        {% elif album.data.label and album.data.label == name %}
+            {% set labelAlbums = (labelAlbums.push(album), labelAlbums) %}
         {% endif %}
     {% endfor %}
-    {% if artistAlbums.length > 0 %}
-    <section class="artist-discography">
+    {% if labelAlbums.length > 0 %}
+    <section class="label-discography">
         <h2>Discography</h2>
         <div class="album-grid">
-        {% for album in artistAlbums %}
+        {% for album in labelAlbums %}
             <div class="album-card">
                 <a href="{{ album.url }}" class="album-link">
                     {% if album.data.cover %}
@@ -76,19 +76,19 @@ layout: layouts/base.njk
     </section>
     {% endif %}
 
-    {% set artistMerch = [] %}
+    {% set labelMerch = [] %}
     {% for item in collections.shop %}
-        {% if item.data.artists and item.data.artists.includes(name) %}
-            {% set artistMerch = (artistMerch.push(item), artistMerch) %}
-        {% elif item.data.artist and item.data.artist == name %}
-            {% set artistMerch = (artistMerch.push(item), artistMerch) %}
+        {% if item.data.labels and item.data.labels.includes(name) %}
+            {% set labelMerch = (labelMerch.push(item), labelMerch) %}
+        {% elif item.data.label and item.data.label == name %}
+            {% set labelMerch = (labelMerch.push(item), labelMerch) %}
         {% endif %}
     {% endfor %}
-    {% if artistMerch.length > 0 %}
-    <section class="artist-merch">
+    {% if labelMerch.length > 0 %}
+    <section class="label-merch">
         <h2>Merchandise</h2>
         <div class="merch-grid">
-        {% for item in artistMerch %}
+        {% for item in labelMerch %}
             <div class="merch-card">
                 <a href="{{ item.url }}" class="merch-link">
                     {% if item.data.cover %}
