--- a/src/audio/index.njk
+++ b/src/audio/index.njk
@@ -19,7 +19,7 @@ title: Audio
                 <p class="artist">by
                 {% for artistName in audio.data.artists %}
                     {% set artistSlug = artistName | slugify %}
-                    <a href="/artists/{{ artistSlug }}/" class="artist-link">{{ artistName }}</a>{% if not loop.last %}{% if loop.revindex == 2 %} and {% else %}, {% endif %}{% endif %}
+                    <a href="/artists/{{ artistSlug }}/" class="artist-link">{{ artistName }}</a>{% if not loop.last %}{% if loop.revindex == 2 %} && {% else %}, {% endif %}{% endif %}
                 {% endfor %}
                 </p>
             {% elif audio.data.artist %}
