--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -83,7 +83,7 @@ code {
 }
 
 .site-title a {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     text-decoration: none;
     color: var(--primary-color);
@@ -115,13 +115,15 @@ code {
 }
 
 .hero h1 {
-    font-size: 3rem;
+    font-size: 4rem;
     margin-bottom: var(--spacing-sm);
     color: var(--primary-color);
 }
 
 .hero p {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-right: 33%;
     color: var(--text-light);
 }
 
@@ -354,7 +356,7 @@ code {
 
 /* Artist Styles */
 .artist {
-    max-width: 800px;
+    //max-width: 800px;
     margin: 0 auto;
 }
 
@@ -888,7 +890,7 @@ code {
 .album-link,
 .merch-link,
 .artist-link {
-    display: block;
+    //display: block;
     color: inherit;
     text-decoration: none;
 }
